2005-03-28  Jonathan Pryor  <jonpryor@vt.edu>

	* StdioFileStreamTest.cs: Added; based on MonoTests.System.IO.FileStreamTest.

2005-02-09  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Signal is currently ignored, but add Category(NotDotNet) so
	  it isn't run even when we fix it.  .NET 1.1 doesn't marshal delegates
	  properly for signal (different calling conventions).
	  Add Category(NotDotNet) for Snprintf(), as MSVCRT.dll doesn't export it.
	* UnixGroupTest.cs, UnixUserTest.cs: Don't run these under .NET, as Windows
	  doesn't support the Syscall and related classes.

2005-02-01  Raja R Harinath  <rharinath@novell.com>

	* UnixUserTest.cs (UnixUserTest.ReentrantConstructors): Don't
	assume userid<->username mapping is a bijection.
	(UnixUserTest.NonReentrantSyscalls): Likewise.

2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Ignore the signal(3) test, as it's currently hanging Mono.

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* StdlibTest.cs: Added tests for signal(3) and snprintf(3).

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* ChangeLog: Started.
	* UnixGroupTest.cs, UnixUserTest.cs: Added.
